--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body{
 .progress-area{
     height: 6px;
     width: 100%;
-    background-color: red;
+    background-color: #f0f0f0;
     border-radius: 50px;
     cursor: pointer;
 }
@@ -76,6 +76,23 @@ body{
     height: inherit;
     width: 50%;
     border-radius: inherit;
-    background-color: blue;
+    background: linear-gradient(90deg, var(--pink) 0%, var(--violet) 100%);
+}
+.progress-bar::before{
+    content: "";
+    position: absolute;
+    height: 12px;
+    width: 12px;
+    background-color: #000;
+    border-radius: inherit;
+    top: 50%;
+    right: -5px;
+    transform: translateY(-50%);
+    background: inherit;
+    opacity: 0;
+    transition: opacity 0.2s ease;
+}
+.progress-area:hover .progress-bar::before{
+    opacity: 1;
     
 }
