--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body{
 .progress-area{
     height: 6px;
     width: 100%;
-    background-color: #f0f0f0;
+    background: #f0f0f0;
     border-radius: 50px;
     cursor: pointer;
 }
@@ -76,6 +76,7 @@ body{
     height: inherit;
     width: 50%;
     border-radius: inherit;
+    position: relative;
     background: linear-gradient(90deg, var(--pink) 0%, var(--violet) 100%);
 }
 .progress-bar::before{
@@ -83,7 +84,7 @@ body{
     position: absolute;
     height: 12px;
     width: 12px;
-    background-color: #000;
+    background: #000;
     border-radius: inherit;
     top: 50%;
     right: -5px;
@@ -94,5 +95,4 @@ body{
 }
 .progress-area:hover .progress-bar::before{
     opacity: 1;
-    
 }
