--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
 }
 .wrapper{
     width: 380px;
+    position: relative;
     background-color: var(--white);
     border-radius: 15px;
     padding: 25px 30px;
@@ -28,7 +29,7 @@ body{
 .wrapper i{
     cursor: pointer;
 }
-.top-bar{
+.top-bar, .progress-area .timer, .controls, .music-list .header, .music-list li{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -96,3 +97,100 @@ body{
 .progress-area:hover .progress-bar::before{
     opacity: 1;
 }
+.progress-area .timer{
+    margin-top: 2px;
+}
+.timer span{
+    font-size: 13px;
+    color: var(--lightblack);
+}
+.controls{
+    margin: 40px 0px 5px 0;
+}
+.controls i{
+    font-size:  28px;
+    user-select: none;
+    background: linear-gradient(var(--pink) 0%, var(--violet) 100%);
+    background-clip: text;
+    -webkit-background-clip:text;
+    -webkit-text-fill-color: transparent;
+}
+.controls i:nth-child(2), .controls i:nth-child(4){
+    font-size: 43px;
+}
+.controls #prev{
+    margin-right: -13px;
+}
+.controls #next{
+    margin-right: -13px;
+}
+.controls .play-pause{
+    height: 54px;
+    width: 54px;
+    background: linear-gradient(var(--white) 0%, var(--darkwhite) 100%);
+    box-shadow: 0px 0px 5px var(--pink);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.play-pause::before{
+    content: "";
+    position: absolute;
+    height: 43px;
+    width: 43px;
+    border-radius: inherit;
+    background: linear-gradient(var(--pink) 0%, var(--violet) 100%);
+}
+.play-pause i{
+    height: 43px;
+    width: 43px;
+    line-height: 43px;
+    text-align: center;
+    border-radius: inherit;
+    background: inherit;
+    position: relative;
+    background-clip: text;
+    -webkit-background-clip:text;
+    -webkit-text-fill-color: transparent;
+}
+
+/* .music-list ul, p { 
+    list-style: initial;
+    margin: initial;
+    padding: 0px;
+ } */
+
+.music-list{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    padding: 15px 30px;
+    border-radius: 15px;
+    background: var(--white);
+    box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.1); 
+}
+/* .music-list .header .row{
+    display: flex;
+    align-items: center;
+    font-size: 19px;
+    color: var(--lightblack);
+}
+
+.header .row i{
+    cursor: default;
+}
+.header .row span{
+    margin-left: 5px;
+}
+.header #close{
+    font-size: 22px;
+    color: var(--lightblack);
+}
+.music-list ul{
+    margin: 10px 0;
+}
+.music-list ul li{
+    list-style: none;
+}  */
