--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css);
 *{
     margin: 0;
     padding: 0;
@@ -19,11 +20,27 @@
     --lightbshadow: rgba(0,0,0,0.15);
 }
 body{
+    background: #323975;
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
 }
+
+.fa-snowflake{
+    z-index: -1;
+    animation: fall linear forwards;
+    color:  #fff;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+@keyframes fall{
+    to {
+        transform: translateY(105vh);
+    }
+}
+
 .wrapper{
     width: 380px;
     overflow: hidden;
